# philippine-eagle-rag-agent

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
src/: RAG-base.ipynb  app.py  eval.py  system_prompt.txt  tools.py  ui.py  utils.py
