[project]
name = "animal-conservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community<0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-vertexai>=3.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "protobuf==4.25.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "ragas",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]

[tool.uv.sources]
ragas = { git = "https://github.com/GoldSharon/ragas.git" }
